--- a/contact.html
+++ b/contact.html
@@ -11,20 +11,20 @@
       <div id="header_nav">
         <ul>
           <li><a href="./index.html">Work</a></li>
-          <li><a href="./blog.html">Blog</a></li>
+         
           <li><a class="active" href="./contact.html">Contact</a></li>
         </ul>
       </div>
-      <div id="title">KiyoshiJazper</div>
+      <div id="title">Samasya</div>
       <div id="social_media">
         <ul>
           <li>
-            <a target="_blank" href="https://www.linkedin.com/in/kiyoshijazper/">
+            <a target="_blank" href="https://www.linkedin.com/in/samasya-p-pramod-a6a011220/">
               <img src='./Images/LI-In-Bug.png' />
             </a>
           </li>
           <li>
-            <a target="_blank" href="https://github.com/JoyJazper">
+            <a target="_blank" href="https://github.com/Samaspp">
               <img src='./Images/github-mark-white.svg' />
             </a>
           </li>
@@ -33,8 +33,8 @@
     </div>    
     <div id="contact">
       <div class="game_cta">
-        <a target="_blank" href="mailto:joy.officialdev@gmail.com"><button>joy.officialdev@gmail.com</button></a>
-        <a target="_blank" href="https://wa.me/9989721173"><button>(+91) 99 89 72 11 73</button></a>
+        <a target="_blank" href="mailto:samasyappramod.mec@gmail.com"><button>samasyappramod.mec@gmail.com</button></a>
+        <a target="_blank" href="https://wa.me/7012515511"><button>(+91) 7012515511</button></a>
       </div>
     </div>    
   </body>
